RIPE NCC has merged 37710f6
* gitlab: stop building a docker image [937a3faa]
* README: replace docker-compose with local gradle build [skip-ci] [deb04e53]
* Enable ASPA in production [6b6cf9a3]
* Use HTTPS URLs for internal test services [1de15708]
* Replace endpoints in service client [056ef7c2]
* gitlab: auto-deploy prepdev on 'next' only [c7e155c7]
* Try another version of rules [8ead6c94]
* Cleanup [d51ec5a5]
* Solve issue with 'this-escape' warning [514b5129]
* Automatically deploy to prepdev when merging to next [67ea8b81]
* Copy configuration from rpki-monitoring [8c450651]
* Revert auto-merge-renovate-to-next and update renovate.json [3205cea2]
* Try some automerge [22f78756]
* Try different image (openjdk-21 is deprecated) [b3569a92]
* JVM option [96301cee]
* Bump gradle image version [ce6de10d]
* Make it build with JDK21 [8357b746]
* Simple 17 -> 21 replacement [ad2745d1]
* Oopsie [fc41294f]
* Naming [720c96ba]
* Format unique ASNs, otherwise we have very long messages in logs [7867204b]
* chore(deps): update dependency io.sentry:sentry-bom to v8.26.0 [9b3b8147]
* Naming [8b012687]
* chore(deps): update dependency net.logstash.logback:logstash-logback-encoder to v9 [574792ee]
* chore(deps): update dependency org.sonarqube:org.sonarqube.gradle.plugin to v7.0.1.6134 [491d3909]
* Delete UPGRADE.txt [b591d5bc]
* Remove opentelemetry from prepdev [8ada30f6]
* Remove opentelemetry from prepdev [7ddc38b9]
* Remove opentelemetry from prepdev [a936dce2]
* Cleanup docker-compose configuration [1c083cac]